--- a/examples/example-android/androidBleSdkTestApp/app/src/main/res/values/strings.xml
+++ b/examples/example-android/androidBleSdkTestApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">AndroidBleSdk</string>
-    <string name="selectDeviceButton">"Select Device"</string>
+    <string name="app_name">Ekso Activity Monitor</string>
+    <string name="selectDeviceButton">"Connect to Device"</string>
     <string name="heartRateLabel">Heart Rate</string>
     <string name="heartRateValue">0</string>
     <string name="AccelXLabel">"X"</string>
