--- a/examples/example-android/androidBleSdkTestApp/app/src/main/res/values/strings.xml
+++ b/examples/example-android/androidBleSdkTestApp/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="selectDeviceButton">"Connect to Device"</string>
     <string name="heartRateLabel">Heart Rate</string>
     <string name="heartRateValue">0</string>
-    <string name="AccelXLabel">"X"</string>
-    <string name="AccelYLabel">"Y"</string>
-    <string name="AccelZLabel">"Z"</string>
+    <string name="AccelXLabel">"X Accel"</string>
+    <string name="AccelYLabel">"Y Accel"</string>
+    <string name="AccelZLabel">"Z Accel"</string>
     <string name="AccelXValue">0</string>
     <string name="AccelYValue">0</string>
     <string name="AccelZValue">0</string>
